# zeta-software

./: .eslintrc.js  .gitignore  .pre-commit-config.yaml  emptyFile.txt  package-lock.json  package.json  pyproject.toml  readme.md  vue.config.js
.github/workflows/: run_pytest.yaml
public/: DummyPressureData.csv  preload.js
public/CADFIles/: 32_8_DummyData.csv  8_4_DummyData.csv  8_4_DummyDataUniform.csv  samplePressureDataSet.csv
public/CADFiles/: 8_4_DummyDataUniformOnlyPressure.csv  LeftRightMatIncreasingBottomRight.csv  samplePressureDataSet.csv
scripts/: capture_data.py
src/: App.vue  background.js  firmataClient.js  firmata_client.js  firmwareInterface.js
src/assets/styles/: buttonStyles.css
src/components/: CADViewer.vue  DottedLoadingBar.vue  LoadingSpinner.vue  MainPage.vue  NumberList.vue  TextField.vue
tests/: test_zeta.py
vue-desktop/: package-lock.json
zeta-gui/: .eslintrc.js  README.md  emptyFile.txt  package-lock.json  package.json
zeta-gui/src/: App.vue  background.js
zeta-gui/src/components/: NumberList.vue
